# libraryAPI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pre-commit.yml
alembic/: env.py
alembic/versions/: 286ade602d14_create_core_tables.py  b21c7c7c6ed6_add_book_description.py
app/: main.py
app/auth/: dependencies.py  jwt.py  security.py
app/core/: config.py
app/crud/: book.py  borrowed_book.py  reader.py  user.py
app/db/: session.py
app/models/: __init__.py  book.py  borrowed_book.py  reader.py  user.py
app/routers/: auth.py  book.py  borrow.py  reader.py  user.py
app/schemas/: book.py  borrow.py  reader.py  token.py  user.py
tests/: conftest.py  test_auth.py  test_books.py  test_borrow.py  test_end_to_end.py  test_reader.py  test_users.py
